# test-libmutter

./: .gitignore  Makefile.am  configure.ac.in
src/: Makefile.am  main.c
